<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
 
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
 
        <LinearLayout
            android:id="@+id/page1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
 
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_list"
                android:textSize="20sp" />
<!-- [BEGIN] Video List -->
            <ScrollView
                android:id="@+id/video_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffff00" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                     <!-- TODO : List view's height needs to be automatical -->
                    <ListView
	                    android:id="@+id/video_listview"
	                    android:layout_width="match_parent"
	                    android:layout_height="400dp"
	                    android:cacheColorHint="#00000000"
	                    android:choiceMode="none"
	                    android:clickable="false"
	                    android:focusable="false"
	                    android:focusableInTouchMode="false"
	                    android:longClickable="false" />
                </LinearLayout>
            </ScrollView>
<!-- [END] Video List -->
        </LinearLayout>
    </FrameLayout>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:gravity="right"
        android:orientation="horizontal" >
 
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording" />
 
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/stop" />
    </LinearLayout>
</LinearLayout>